--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         yarn install
-        npm ci
+        # npm ci
         npm run build --if-present
         npm test
       env:
