--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,6 @@ jobs:
         yarn install
         # npm ci
         npm run build --if-present
-        npm test
+        npm test --passWithNoTests
       env:
         CI: true
